// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack@1 WebpackNotifierPlugin child compilation errors ["successful"] undefined {"plugins":[{"level":"Error","levelCollectionKey":"errors"}]}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: Child Compilation Error",
  "title": "Webpack",
}
`;

exports[`webpack@1 WebpackNotifierPlugin child compilation errors ["successful"] undefined {"plugins":[{"level":"Warning","levelCollectionKey":"warnings"}]}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: Child Compilation Warning",
  "title": "Webpack",
}
`;

exports[`webpack@1 WebpackNotifierPlugin child compilation errors ["successful"] undefined {"plugins":[{"level":false},{"level":"Warning","levelCollectionKey":"warnings"}]}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: Child Compilation Warning",
  "title": "Webpack",
}
`;

exports[`webpack@1 WebpackNotifierPlugin contentImage ["error"] {contentImage: {success: "../successImage.png"}, error: "../errorImage.png"}, warning: "../warningImage.png"}}: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/errorsImage.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Webpack",
}
`;

exports[`webpack@1 WebpackNotifierPlugin contentImage ["successful"] {contentImage: "../another-logo.png"}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/another-logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@1 WebpackNotifierPlugin contentImage ["successful"] {contentImage: {success: "../successImage.png"}, error: "../errorImage.png"}, warning: "../warningImage.png"}}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/successImage.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@1 WebpackNotifierPlugin contentImage ["warning"] {contentImage: {success: "../successImage.png"}, error: "../errorImage.png"}, warning: "../warningImage.png"}}: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/warningsImage.png",
  "message": "Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "Webpack",
}
`;

exports[`webpack@1 WebpackNotifierPlugin custom warning ["successful"] undefined: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: Custom Warning message",
  "title": "Webpack",
}
`;

exports[`webpack@1 WebpackNotifierPlugin emoji message ["error"] {"emoji":true} %j: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "emoji": true,
  "message": "❌ Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Webpack",
}
`;

exports[`webpack@1 WebpackNotifierPlugin emoji message ["successful"] {"emoji":true} %j: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "emoji": true,
  "message": "✅ Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@1 WebpackNotifierPlugin emoji message ["successful"] {"emoji":true} {"plugins":[{}]}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "emoji": true,
  "message": "⚠️ Warning: Custom Warning message",
  "title": "Webpack",
}
`;

exports[`webpack@1 WebpackNotifierPlugin emoji message ["warning"] {"emoji":true} %j: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "emoji": true,
  "message": "⚠️ Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "Webpack",
}
`;

exports[`webpack@1 WebpackNotifierPlugin one compilation ["error"] undefined: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Webpack",
}
`;

exports[`webpack@1 WebpackNotifierPlugin one compilation ["successful"] undefined: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@1 WebpackNotifierPlugin one compilation ["warning"] undefined: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "Webpack",
}
`;

exports[`webpack@1 WebpackNotifierPlugin title ["error"] {}: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "build error ❌",
}
`;

exports[`webpack@1 WebpackNotifierPlugin title ["successful"] {"title":"Webpack"}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@1 WebpackNotifierPlugin title ["successful"] {}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "build complete ✅",
}
`;

exports[`webpack@1 WebpackNotifierPlugin title ["warning"] {}: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "build warning ⚠️",
}
`;

exports[`webpack@1 WebpackNotifierPlugin title new title function API ["error"] {}: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Build status is error with message Error: /entry.js
SyntaxError: Unexpected token (1:8)",
}
`;

exports[`webpack@1 WebpackNotifierPlugin title new title function API ["successful"] {"title":"Webpack"}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@1 WebpackNotifierPlugin title new title function API ["successful"] {}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Build status is success with message Build successful",
}
`;

exports[`webpack@1 WebpackNotifierPlugin title new title function API ["warning"] {}: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "Build status is warning with message Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
}
`;

exports[`webpack@1 WebpackNotifierPlugin verbosity level configuration Always Notify ["successful","successful"] {"alwaysNotify":true}: after "successful" build 1`] = `
Object {
  "alwaysNotify": true,
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@1 WebpackNotifierPlugin verbosity level configuration Always Notify ["successful","successful"] {"alwaysNotify":true}: after "successful" build 2`] = `
Object {
  "alwaysNotify": true,
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@1 WebpackNotifierPlugin verbosity level configuration Default ["error","error","successful"] undefined: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Webpack",
}
`;

exports[`webpack@1 WebpackNotifierPlugin verbosity level configuration Default ["error","error","successful"] undefined: after "error" build 2`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Webpack",
}
`;

exports[`webpack@1 WebpackNotifierPlugin verbosity level configuration Default ["error","error","successful"] undefined: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@1 WebpackNotifierPlugin verbosity level configuration Default ["successful","successful","successful"] undefined: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@1 WebpackNotifierPlugin verbosity level configuration Default ["successful","successful","successful"] undefined: after "successful" build 2`] = `Array []`;

exports[`webpack@1 WebpackNotifierPlugin verbosity level configuration Default ["successful","successful","successful"] undefined: after "successful" build 3`] = `Array []`;

exports[`webpack@1 WebpackNotifierPlugin verbosity level configuration Exclude Warnings ["warning"] {"excludeWarnings":true}: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "excludeWarnings": true,
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@1 WebpackNotifierPlugin verbosity level configuration Notify on error ["successful","warning","error"] {"onlyOnError":true}: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "onlyOnError": true,
  "title": "Webpack",
}
`;

exports[`webpack@1 WebpackNotifierPlugin verbosity level configuration Notify on error ["successful","warning","error"] {"onlyOnError":true}: after "successful" build 1`] = `Array []`;

exports[`webpack@1 WebpackNotifierPlugin verbosity level configuration Notify on error ["successful","warning","error"] {"onlyOnError":true}: after "warning" build 1`] = `Array []`;

exports[`webpack@1 WebpackNotifierPlugin verbosity level configuration Skip Notification on the First Build ["successful","successful"] {"skipFirstNotification":true}: after "successful" build 1`] = `Array []`;

exports[`webpack@1 WebpackNotifierPlugin verbosity level configuration Skip Notification on the First Build ["successful","successful"] {"skipFirstNotification":true}: after "successful" build 2`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "skipFirstNotification": true,
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin child compilation errors ["successful"] undefined {"plugins":[{"level":"Error","levelCollectionKey":"errors"}]}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: Child Compilation Error",
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin child compilation errors ["successful"] undefined {"plugins":[{"level":"Warning","levelCollectionKey":"warnings"}]}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: Child Compilation Warning",
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin child compilation errors ["successful"] undefined {"plugins":[{"level":false},{"level":"Warning","levelCollectionKey":"warnings"}]}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: Child Compilation Warning",
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin contentImage ["error"] {contentImage: {success: "../successImage.png"}, error: "../errorImage.png"}, warning: "../warningImage.png"}}: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/errorsImage.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin contentImage ["successful"] {contentImage: "../another-logo.png"}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/another-logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin contentImage ["successful"] {contentImage: {success: "../successImage.png"}, error: "../errorImage.png"}, warning: "../warningImage.png"}}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/successImage.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin contentImage ["warning"] {contentImage: {success: "../successImage.png"}, error: "../errorImage.png"}, warning: "../warningImage.png"}}: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/warningsImage.png",
  "message": "Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin custom warning ["successful"] undefined: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: Custom Warning message",
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin emoji message ["error"] {"emoji":true} %j: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "emoji": true,
  "message": "❌ Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin emoji message ["successful"] {"emoji":true} %j: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "emoji": true,
  "message": "✅ Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin emoji message ["successful"] {"emoji":true} {"plugins":[{}]}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "emoji": true,
  "message": "⚠️ Warning: Custom Warning message",
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin emoji message ["warning"] {"emoji":true} %j: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "emoji": true,
  "message": "⚠️ Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin one compilation ["error"] undefined: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin one compilation ["successful"] undefined: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin one compilation ["warning"] undefined: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin title ["error"] {}: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "build error ❌",
}
`;

exports[`webpack@2 WebpackNotifierPlugin title ["successful"] {"title":"Webpack"}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin title ["successful"] {}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "build complete ✅",
}
`;

exports[`webpack@2 WebpackNotifierPlugin title ["warning"] {}: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "build warning ⚠️",
}
`;

exports[`webpack@2 WebpackNotifierPlugin title new title function API ["error"] {}: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Build status is error with message Error: /entry.js
SyntaxError: Unexpected token (1:8)",
}
`;

exports[`webpack@2 WebpackNotifierPlugin title new title function API ["successful"] {"title":"Webpack"}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin title new title function API ["successful"] {}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Build status is success with message Build successful",
}
`;

exports[`webpack@2 WebpackNotifierPlugin title new title function API ["warning"] {}: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "Build status is warning with message Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
}
`;

exports[`webpack@2 WebpackNotifierPlugin verbosity level configuration Always Notify ["successful","successful"] {"alwaysNotify":true}: after "successful" build 1`] = `
Object {
  "alwaysNotify": true,
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin verbosity level configuration Always Notify ["successful","successful"] {"alwaysNotify":true}: after "successful" build 2`] = `
Object {
  "alwaysNotify": true,
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin verbosity level configuration Default ["error","error","successful"] undefined: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin verbosity level configuration Default ["error","error","successful"] undefined: after "error" build 2`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin verbosity level configuration Default ["error","error","successful"] undefined: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin verbosity level configuration Default ["successful","successful","successful"] undefined: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin verbosity level configuration Default ["successful","successful","successful"] undefined: after "successful" build 2`] = `Array []`;

exports[`webpack@2 WebpackNotifierPlugin verbosity level configuration Default ["successful","successful","successful"] undefined: after "successful" build 3`] = `Array []`;

exports[`webpack@2 WebpackNotifierPlugin verbosity level configuration Exclude Warnings ["warning"] {"excludeWarnings":true}: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "excludeWarnings": true,
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin verbosity level configuration Notify on error ["successful","warning","error"] {"onlyOnError":true}: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "onlyOnError": true,
  "title": "Webpack",
}
`;

exports[`webpack@2 WebpackNotifierPlugin verbosity level configuration Notify on error ["successful","warning","error"] {"onlyOnError":true}: after "successful" build 1`] = `Array []`;

exports[`webpack@2 WebpackNotifierPlugin verbosity level configuration Notify on error ["successful","warning","error"] {"onlyOnError":true}: after "warning" build 1`] = `Array []`;

exports[`webpack@2 WebpackNotifierPlugin verbosity level configuration Skip Notification on the First Build ["successful","successful"] {"skipFirstNotification":true}: after "successful" build 1`] = `Array []`;

exports[`webpack@2 WebpackNotifierPlugin verbosity level configuration Skip Notification on the First Build ["successful","successful"] {"skipFirstNotification":true}: after "successful" build 2`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "skipFirstNotification": true,
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin child compilation errors ["successful"] undefined {"plugins":[{"level":"Error","levelCollectionKey":"errors"}]}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: Child Compilation Error",
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin child compilation errors ["successful"] undefined {"plugins":[{"level":"Warning","levelCollectionKey":"warnings"}]}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: Child Compilation Warning",
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin child compilation errors ["successful"] undefined {"plugins":[{"level":false},{"level":"Warning","levelCollectionKey":"warnings"}]}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: Child Compilation Warning",
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin contentImage ["error"] {contentImage: {success: "../successImage.png"}, error: "../errorImage.png"}, warning: "../warningImage.png"}}: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/errorsImage.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin contentImage ["successful"] {contentImage: "../another-logo.png"}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/another-logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin contentImage ["successful"] {contentImage: {success: "../successImage.png"}, error: "../errorImage.png"}, warning: "../warningImage.png"}}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/successImage.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin contentImage ["warning"] {contentImage: {success: "../successImage.png"}, error: "../errorImage.png"}, warning: "../warningImage.png"}}: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/warningsImage.png",
  "message": "Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin custom warning ["successful"] undefined: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: Custom Warning message",
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin emoji message ["error"] {"emoji":true} %j: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "emoji": true,
  "message": "❌ Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin emoji message ["successful"] {"emoji":true} %j: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "emoji": true,
  "message": "✅ Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin emoji message ["successful"] {"emoji":true} {"plugins":[{}]}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "emoji": true,
  "message": "⚠️ Warning: Custom Warning message",
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin emoji message ["warning"] {"emoji":true} %j: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "emoji": true,
  "message": "⚠️ Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin one compilation ["error"] undefined: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin one compilation ["successful"] undefined: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin one compilation ["warning"] undefined: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin title ["error"] {}: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "build error ❌",
}
`;

exports[`webpack@3 WebpackNotifierPlugin title ["successful"] {"title":"Webpack"}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin title ["successful"] {}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "build complete ✅",
}
`;

exports[`webpack@3 WebpackNotifierPlugin title ["warning"] {}: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "build warning ⚠️",
}
`;

exports[`webpack@3 WebpackNotifierPlugin title new title function API ["error"] {}: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Build status is error with message Error: /entry.js
SyntaxError: Unexpected token (1:8)",
}
`;

exports[`webpack@3 WebpackNotifierPlugin title new title function API ["successful"] {"title":"Webpack"}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin title new title function API ["successful"] {}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Build status is success with message Build successful",
}
`;

exports[`webpack@3 WebpackNotifierPlugin title new title function API ["warning"] {}: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "Build status is warning with message Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
}
`;

exports[`webpack@3 WebpackNotifierPlugin verbosity level configuration Always Notify ["successful","successful"] {"alwaysNotify":true}: after "successful" build 1`] = `
Object {
  "alwaysNotify": true,
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin verbosity level configuration Always Notify ["successful","successful"] {"alwaysNotify":true}: after "successful" build 2`] = `
Object {
  "alwaysNotify": true,
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin verbosity level configuration Default ["error","error","successful"] undefined: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin verbosity level configuration Default ["error","error","successful"] undefined: after "error" build 2`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin verbosity level configuration Default ["error","error","successful"] undefined: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin verbosity level configuration Default ["successful","successful","successful"] undefined: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin verbosity level configuration Default ["successful","successful","successful"] undefined: after "successful" build 2`] = `Array []`;

exports[`webpack@3 WebpackNotifierPlugin verbosity level configuration Default ["successful","successful","successful"] undefined: after "successful" build 3`] = `Array []`;

exports[`webpack@3 WebpackNotifierPlugin verbosity level configuration Exclude Warnings ["warning"] {"excludeWarnings":true}: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "excludeWarnings": true,
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin verbosity level configuration Notify on error ["successful","warning","error"] {"onlyOnError":true}: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "onlyOnError": true,
  "title": "Webpack",
}
`;

exports[`webpack@3 WebpackNotifierPlugin verbosity level configuration Notify on error ["successful","warning","error"] {"onlyOnError":true}: after "successful" build 1`] = `Array []`;

exports[`webpack@3 WebpackNotifierPlugin verbosity level configuration Notify on error ["successful","warning","error"] {"onlyOnError":true}: after "warning" build 1`] = `Array []`;

exports[`webpack@3 WebpackNotifierPlugin verbosity level configuration Skip Notification on the First Build ["successful","successful"] {"skipFirstNotification":true}: after "successful" build 1`] = `Array []`;

exports[`webpack@3 WebpackNotifierPlugin verbosity level configuration Skip Notification on the First Build ["successful","successful"] {"skipFirstNotification":true}: after "successful" build 2`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "skipFirstNotification": true,
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin child compilation errors ["successful"] undefined {"plugins":[{"level":"Error","levelCollectionKey":"errors"}]}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: Child Compilation Error",
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin child compilation errors ["successful"] undefined {"plugins":[{"level":"Warning","levelCollectionKey":"warnings"}]}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: Child Compilation Warning",
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin child compilation errors ["successful"] undefined {"plugins":[{"level":false},{"level":"Warning","levelCollectionKey":"warnings"}]}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: Child Compilation Warning",
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin contentImage ["error"] {contentImage: {success: "../successImage.png"}, error: "../errorImage.png"}, warning: "../warningImage.png"}}: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/errorsImage.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin contentImage ["successful"] {contentImage: "../another-logo.png"}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/another-logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin contentImage ["successful"] {contentImage: {success: "../successImage.png"}, error: "../errorImage.png"}, warning: "../warningImage.png"}}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/successImage.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin contentImage ["warning"] {contentImage: {success: "../successImage.png"}, error: "../errorImage.png"}, warning: "../warningImage.png"}}: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/warningsImage.png",
  "message": "Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin custom warning ["successful"] undefined: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: Custom Warning message",
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin emoji message ["error"] {"emoji":true} %j: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "emoji": true,
  "message": "❌ Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin emoji message ["successful"] {"emoji":true} %j: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "emoji": true,
  "message": "✅ Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin emoji message ["successful"] {"emoji":true} {"plugins":[{}]}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "emoji": true,
  "message": "⚠️ Warning: Custom Warning message",
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin emoji message ["warning"] {"emoji":true} %j: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "emoji": true,
  "message": "⚠️ Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin one compilation ["error"] undefined: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin one compilation ["successful"] undefined: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin one compilation ["warning"] undefined: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin title ["error"] {}: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "build error ❌",
}
`;

exports[`webpack@4 WebpackNotifierPlugin title ["successful"] {"title":"Webpack"}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin title ["successful"] {}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "build complete ✅",
}
`;

exports[`webpack@4 WebpackNotifierPlugin title ["warning"] {}: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "build warning ⚠️",
}
`;

exports[`webpack@4 WebpackNotifierPlugin title new title function API ["error"] {}: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Build status is error with message Error: /entry.js
SyntaxError: Unexpected token (1:8)",
}
`;

exports[`webpack@4 WebpackNotifierPlugin title new title function API ["successful"] {"title":"Webpack"}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin title new title function API ["successful"] {}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Build status is success with message Build successful",
}
`;

exports[`webpack@4 WebpackNotifierPlugin title new title function API ["warning"] {}: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "Build status is warning with message Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
}
`;

exports[`webpack@4 WebpackNotifierPlugin verbosity level configuration Always Notify ["successful","successful"] {"alwaysNotify":true}: after "successful" build 1`] = `
Object {
  "alwaysNotify": true,
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin verbosity level configuration Always Notify ["successful","successful"] {"alwaysNotify":true}: after "successful" build 2`] = `
Object {
  "alwaysNotify": true,
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin verbosity level configuration Default ["error","error","successful"] undefined: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin verbosity level configuration Default ["error","error","successful"] undefined: after "error" build 2`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin verbosity level configuration Default ["error","error","successful"] undefined: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin verbosity level configuration Default ["successful","successful","successful"] undefined: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin verbosity level configuration Default ["successful","successful","successful"] undefined: after "successful" build 2`] = `Array []`;

exports[`webpack@4 WebpackNotifierPlugin verbosity level configuration Default ["successful","successful","successful"] undefined: after "successful" build 3`] = `Array []`;

exports[`webpack@4 WebpackNotifierPlugin verbosity level configuration Exclude Warnings ["warning"] {"excludeWarnings":true}: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "excludeWarnings": true,
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin verbosity level configuration Notify on error ["successful","warning","error"] {"onlyOnError":true}: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "onlyOnError": true,
  "title": "Webpack",
}
`;

exports[`webpack@4 WebpackNotifierPlugin verbosity level configuration Notify on error ["successful","warning","error"] {"onlyOnError":true}: after "successful" build 1`] = `Array []`;

exports[`webpack@4 WebpackNotifierPlugin verbosity level configuration Notify on error ["successful","warning","error"] {"onlyOnError":true}: after "warning" build 1`] = `Array []`;

exports[`webpack@4 WebpackNotifierPlugin verbosity level configuration Skip Notification on the First Build ["successful","successful"] {"skipFirstNotification":true}: after "successful" build 1`] = `Array []`;

exports[`webpack@4 WebpackNotifierPlugin verbosity level configuration Skip Notification on the First Build ["successful","successful"] {"skipFirstNotification":true}: after "successful" build 2`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "skipFirstNotification": true,
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin child compilation errors ["successful"] undefined {"plugins":[{"level":"Error","levelCollectionKey":"errors"}]}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: Child Compilation Error",
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin child compilation errors ["successful"] undefined {"plugins":[{"level":"Warning","levelCollectionKey":"warnings"}]}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: Child Compilation Warning",
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin child compilation errors ["successful"] undefined {"plugins":[{"level":false},{"level":"Warning","levelCollectionKey":"warnings"}]}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: Child Compilation Warning",
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin contentImage ["error"] {contentImage: {success: "../successImage.png"}, error: "../errorImage.png"}, warning: "../warningImage.png"}}: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/errorsImage.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin contentImage ["successful"] {contentImage: "../another-logo.png"}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/another-logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin contentImage ["successful"] {contentImage: {success: "../successImage.png"}, error: "../errorImage.png"}, warning: "../warningImage.png"}}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/successImage.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin contentImage ["warning"] {contentImage: {success: "../successImage.png"}, error: "../errorImage.png"}, warning: "../warningImage.png"}}: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/warningsImage.png",
  "message": "Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin custom warning ["successful"] undefined: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: Custom Warning message",
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin emoji message ["error"] {"emoji":true} %j: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "emoji": true,
  "message": "❌ Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin emoji message ["successful"] {"emoji":true} %j: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "emoji": true,
  "message": "✅ Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin emoji message ["successful"] {"emoji":true} {"plugins":[{}]}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "emoji": true,
  "message": "⚠️ Warning: Custom Warning message",
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin emoji message ["warning"] {"emoji":true} %j: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "emoji": true,
  "message": "⚠️ Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin one compilation ["error"] undefined: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin one compilation ["successful"] undefined: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin one compilation ["warning"] undefined: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin title ["error"] {}: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "build error ❌",
}
`;

exports[`webpack@5 WebpackNotifierPlugin title ["successful"] {"title":"Webpack"}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin title ["successful"] {}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "build complete ✅",
}
`;

exports[`webpack@5 WebpackNotifierPlugin title ["warning"] {}: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "build warning ⚠️",
}
`;

exports[`webpack@5 WebpackNotifierPlugin title new title function API ["error"] {}: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Build status is error with message Error: /entry.js
SyntaxError: Unexpected token (1:8)",
}
`;

exports[`webpack@5 WebpackNotifierPlugin title new title function API ["successful"] {"title":"Webpack"}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin title new title function API ["successful"] {}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Build status is success with message Build successful",
}
`;

exports[`webpack@5 WebpackNotifierPlugin title new title function API ["warning"] {}: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": "Build status is warning with message Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
}
`;

exports[`webpack@5 WebpackNotifierPlugin verbosity level configuration Always Notify ["successful","successful"] {"alwaysNotify":true}: after "successful" build 1`] = `
Object {
  "alwaysNotify": true,
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin verbosity level configuration Always Notify ["successful","successful"] {"alwaysNotify":true}: after "successful" build 2`] = `
Object {
  "alwaysNotify": true,
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin verbosity level configuration Default ["error","error","successful"] undefined: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin verbosity level configuration Default ["error","error","successful"] undefined: after "error" build 2`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin verbosity level configuration Default ["error","error","successful"] undefined: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin verbosity level configuration Default ["successful","successful","successful"] undefined: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin verbosity level configuration Default ["successful","successful","successful"] undefined: after "successful" build 2`] = `Array []`;

exports[`webpack@5 WebpackNotifierPlugin verbosity level configuration Default ["successful","successful","successful"] undefined: after "successful" build 3`] = `Array []`;

exports[`webpack@5 WebpackNotifierPlugin verbosity level configuration Exclude Warnings ["warning"] {"excludeWarnings":true}: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "excludeWarnings": true,
  "message": "Build successful",
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin verbosity level configuration Notify on error ["successful","warning","error"] {"onlyOnError":true}: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "onlyOnError": true,
  "title": "Webpack",
}
`;

exports[`webpack@5 WebpackNotifierPlugin verbosity level configuration Notify on error ["successful","warning","error"] {"onlyOnError":true}: after "successful" build 1`] = `Array []`;

exports[`webpack@5 WebpackNotifierPlugin verbosity level configuration Notify on error ["successful","warning","error"] {"onlyOnError":true}: after "warning" build 1`] = `Array []`;

exports[`webpack@5 WebpackNotifierPlugin verbosity level configuration Skip Notification on the First Build ["successful","successful"] {"skipFirstNotification":true}: after "successful" build 1`] = `Array []`;

exports[`webpack@5 WebpackNotifierPlugin verbosity level configuration Skip Notification on the First Build ["successful","successful"] {"skipFirstNotification":true}: after "successful" build 2`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "skipFirstNotification": true,
  "title": "Webpack",
}
`;
